fix points getting cut off

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ li {
 }
 
 #proj_highlight {
-    width: 400px;
+    width: 450px;
     height: 725px;
     margin-left: 10px;
 }
